--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.0.2",
     "react-share": "^5.2.2",
     "socket.io-client": "^4.8.1"
