--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb://mongo:27017/FactChecker
+MONGO_URI=mongodb://localhost:27017/FactChecker
+AI_API_URL=http://thot.mai.informatik.tu-darmstadt.de:3003
