Add README.md, LICENSE, update .env and add Mongo credentials to docker-compose.yml

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 MONGO_URI=mongodb://localhost:27017/FactChecker
-AI_API_URL=http://thot.mai.informatik.tu-darmstadt.de:3003
+AI_API_URL=http://localhost:3003
